golang learn notes

--- a/_posts/2021-10-05-golang 笔记5 数组.MD
+++ b/_posts/2021-10-05-golang 笔记5 数组.MD
@@ -10,12 +10,12 @@ tags:
     - golang 学习笔记
 ---
 
-# golang 笔记5 数组
+# 数组
 
 
 ## 一维数组
 
-1. `数组` 必须 `给定容量`
+#### 1. `数组` 必须 `给定容量`
 
 ```go
 var arr [5]int // 数组 必须给定容量
@@ -25,7 +25,7 @@ for i := range arr {
 fmt.Printf("%T\n", arr)
 ```
 
-2. 数组初始化
+#### 2. 数组初始化
 
 ```go
 var arr = [5]string{"123", "Hello", "world", "好", "go"} // 全部初始化
@@ -39,7 +39,7 @@ fmt.Println("数组长度=", len(arr))
 arr := [5]string{"Hello", "world"} // 部分初始化
 ```
 
-3. 自动推断长度
+#### 3. 自动推断长度
 
 ```go
 arr := [...]string{"a", "b", "c", "d"} // 自动推断长度
@@ -47,7 +47,7 @@ arr := [...]string{"a", "b", "c", "d"} // 自动推断长度
 // var arr [4]string = [...]string{"a", "b", "c", "d"}
 ```
 
-4. 根据索引位置赋值
+#### 4. 根据索引位置赋值
 
 ```go
 arr := [5]string{1: "111", 4: "444"} // 根据索引位置赋值
@@ -57,7 +57,7 @@ for i, v := range arr {
 }
 ```
 
-5. `[3]int` 和 `[4]int` 不是同一种类型
+#### 5. `[3]int` 和 `[4]int` 不是同一种类型
 
 ```go
 func fun1() [3]int {
@@ -70,7 +70,7 @@ func fun1() [3]int {
 }
 ```
 
-6. 字符串分割
+#### 6. 字符串分割
 
 ```go
 func fun1() {
@@ -81,7 +81,7 @@ func fun1() {
 }
 ```
 
-7. `for i` 与 `for-range`
+#### 7. `for i` 与 `for-range`
 
 ```go
 func fun1() {
@@ -101,7 +101,7 @@ func fun2() {
 }
 ```
 
-8. 数组是`值类型`
+#### 8. 数组是`值类型`
 
 > go文件以 _test 结尾，函数名以 Test 开头，入参为 *testing.T 类型
 
@@ -124,7 +124,7 @@ func TestArrayDemo(t *testing.T) {
 }
 ```
 
-9. `[5]int`(副本) 与 `*[5]int`(引用)
+#### 9. `[5]int`(副本) 与 `*[5]int`(引用)
 
 ```go
 var arr1 = new([5]int)   // arr1 类型 *[5]int  引用类型（即指针）
@@ -187,7 +187,7 @@ func fp(a *[3]int) { // 引用
 }
 ```
 
-10. `*[5]int`(引用) 和 `*[]int`(切片)
+#### 10. `*[5]int`(引用) 和 `*[]int`(切片)
 
 ```go
 /*
