--- a/_posts/2021-10-06-golang 笔记6 切片.md
+++ b/_posts/2021-10-06-golang 笔记6 切片.md
@@ -10,9 +10,9 @@ tags:
     - golang 学习笔记
 ---
 
-# golang 笔记6 切片
+# 切片
 
-1. make 切片
+## 1. make 切片
 
 
 > 切片是一个`引用类型`
@@ -53,7 +53,7 @@ PASS
  */
 ```
 
-2. 从`数组`切割出切片
+## 2. 从`数组`切割出切片
 
 > 切片（Slice）是一个拥有相同类型元素的`可变长度`的序列
 > 基于数组类型做的一层封装
@@ -95,7 +95,7 @@ PASS
 
 > `容量`：底层数组从切片的第一个位置到最后位置的数量
 
-3. 切片只是一个引用 `真正的数据`都保存在`底层数组`中
+## 3. 切片只是一个引用 `真正的数据`都保存在`底层数组`中
 
 ```go
 func TestSlice(t *testing.T) {
@@ -104,7 +104,7 @@ func TestSlice(t *testing.T) {
 }
 ```
 
-4. 遍历方式
+## 4. 遍历方式
 
 ```go
 func TestSlice(t *testing.T) {
@@ -118,7 +118,7 @@ func TestSlice(t *testing.T) {
 }
 ```
 
-5. append 追加元素
+## 5. append 追加元素
 
 ```go
 func TestSliceAppend(t *testing.T) {
@@ -190,7 +190,7 @@ func TestSliceAppend3(t *testing.T) {
 
 ```
 
-6. 删除
+## 6. 删除
 
 
 ```go
@@ -213,7 +213,7 @@ PASS
  */
 ```
 
-7. 深度拷贝
+## 7. 深度拷贝
 
 ```go
 func TestSliceCopy(t *testing.T) {
