--- a/_posts/2021-10-03-golang 笔记3 基本类型.MD
+++ b/_posts/2021-10-03-golang 笔记3 基本类型.MD
@@ -10,7 +10,7 @@ tags:
     - golang 学习笔记
 ---
 
-# golang 笔记3 基本类型
+# 基本类型
 
 ## 定义局部变量的几种方式
 
@@ -58,7 +58,7 @@ for index, value := range s1 {
 
 ## 数值
 
-1. int
+#### 1. int
 
 ```go
 // int, uint 和 uintptr 在 32 位系统上通常为 32 位宽，在 64 位系统上则为 64 位宽
@@ -87,7 +87,7 @@ var id = 9 // 类型推断为 int
 	fmt.Printf("%d\n", d)
 ```
 
-2. 其他整型
+#### 2. 其他整型
 
 ```go
 var id2 int8 = 0 // 8byte 范围：-128~127
@@ -104,7 +104,7 @@ var di1 byte = 2 // uint8 的别名
 var di2 rune = 8 // int32 的别名
 ```
 
-3. 浮点型
+#### 3. 浮点型
 
 ```go
 var a = 0.31 // float64
@@ -114,7 +114,7 @@ var c float32 = 0.1
 var d float64 = 0.31
 ```
 
-4. 复数
+#### 4. 复数
 
 ```go
 var mi1 complex64 = 3.7E+1 + 5.98E-2i // 实部和虚部都是 float32
