golang learn notes

--- a/_posts/2021-10-08-golang 笔记8 函数.md
+++ b/_posts/2021-10-08-golang 笔记8 函数.md
@@ -10,12 +10,12 @@ tags:
     - golang 学习笔记
 ---
 
-# golang 笔记8 函数
+# 函数
 
 
 ## 基本函数
 
-1. 函数基础
+#### 1. 函数基础
 
 > 格式 ： `func` 函数名(入参名 入参类型, ...) 返回参数类型 ... { // 函数体 }
 
@@ -29,7 +29,7 @@ func Add(x, y int) int { // 与 Add(x int, y int) 等效
 }
 ```
 
-2. 命名返回值
+#### 2. 命名返回值
 
 > Go 的返回值可被命名，它们会被视作定义在函数顶部的变量
 
@@ -47,7 +47,7 @@ func Add2(x, y int) (sum int) {
 }
 ```
 
-3. 多返回值
+#### 3. 多返回值
 
 > 函数可以返回任意数量的返回值
 
@@ -69,7 +69,7 @@ func Add4(x, y int) (sum int, err error) {
 }
 ```
 
-4. 可变长参数
+#### 4. 可变长参数
 
 > 可变长参数 必须放在参数列表的最后
 
@@ -124,7 +124,7 @@ PASS
  */
 ```
 
-> 多个 defer 语句，会按照先进后出顺序执行【类似栈的操作，入栈 出栈】
+#### 多个 defer 语句，会按照先进后出顺序执行【类似栈的操作，入栈 出栈】
 
 ```go
 func TestDefer2(t *testing.T) {
@@ -153,7 +153,7 @@ PASS
  */
 ```
 
-> defer 语句中已经无法对函数内的变量进行改动了
+#### defer 语句中已经无法对函数内的变量进行改动了
 
 ```go
 
@@ -200,7 +200,7 @@ func f5() (x int) {
 > 高阶函数 函数可以作为参数和返回值
 > 面向函数编程
 
-1. 函数赋值给变量
+#### 1. 函数赋值给变量
 
 ```go
 func fc0()             {}
@@ -225,7 +225,7 @@ PASS
  */
 ```
 
-2. 函数作为入参
+#### 2. 函数作为入参
 
 ```go
 func fc3(fun1 func()) {
@@ -268,7 +268,7 @@ func TestClosure4(t *testing.T) {
 }
 ```
 
-3. 函数作为出参
+#### 3. 函数作为出参
 
 ```go
 func fc6(x func(int, int), m, n int) func() {
@@ -287,7 +287,7 @@ func TestClosure5(t *testing.T) {
 }
 ```
 
-4. 匿名函数
+#### 4. 匿名函数
 
 ```go
 func TestClosure7(t *testing.T) {
@@ -305,7 +305,7 @@ func TestClosure7(t *testing.T) {
 }
 ```
 
-5. 闭包
+#### 5. 闭包
 
 > 闭包 = 函数 + 外部变量的引用
 > 1. 函数作为出参
