--- a/_posts/2021-10-09-golang 笔记9 结构体.md
+++ b/_posts/2021-10-09-golang 笔记9 结构体.md
@@ -10,7 +10,7 @@ tags:
     - golang 学习笔记
 ---
 
-# golang 笔记9 结构体
+# 结构体
 
 ## type
 
@@ -38,7 +38,7 @@ func TestType(t *testing.T) {
 
 ## struct 结构体
 
-1. 函数内部使用
+#### 1. 函数内部使用
 
 ```go
 func TestStruct1(t *testing.T) {
@@ -52,7 +52,7 @@ func TestStruct1(t *testing.T) {
 }
 ```
 
-2. 结构体 + 自定义类型
+#### 2. 结构体 + 自定义类型
 
 ```go
 
@@ -92,7 +92,7 @@ func TestStruct2(t *testing.T) {
 }
 ```
 
-3. 值拷贝
+#### 3. 值拷贝
 
 ```go
 func changeName(p Person) { // 值拷贝
@@ -123,7 +123,7 @@ func TestStruct4(t *testing.T) {
 }
 ```
 
-4. 初始化方式
+#### 4. 初始化方式
 
 ```go
 func TestStruct5(t *testing.T) {
@@ -147,7 +147,7 @@ func TestStruct5(t *testing.T) {
 }
 ```
 
-5. 作用于特定类型的函数
+#### 5. 作用于特定类型的函数
 
 ```go
 
