--- a/_posts/2021-10-11-golang 笔记11 时间.md
+++ b/_posts/2021-10-11-golang 笔记11 时间.md
@@ -10,10 +10,10 @@ tags:
     - golang 学习笔记
 ---
 
-# golang 笔记11 时间 time
+# 时间 time
 
 
-1. 时间格式化
+## 1. 时间格式化
 
 ```go
 const DEFAULT_TIME_FORMAT = "2006-01-02 15:04:05"
@@ -34,7 +34,7 @@ func TestTimeFormat(te *testing.T) {
 }
 ```
 
-2. 获取时间
+## 2. 获取时间
 
 ```go
 func TestGetTime(te *testing.T) {
@@ -63,7 +63,7 @@ func TestGetTime2(te *testing.T) {
 }
 ```
 
-3. 时间计算
+## 3. 时间计算
 
 ```go
 func TestTimeAdd(te *testing.T) {
@@ -74,7 +74,7 @@ func TestTimeAdd(te *testing.T) {
 }
 ```
 
-4. 线程休眠
+## 4. 线程休眠
 
 ```go
 // 休眠
