--- a/_posts/2021-10-12-golang 笔记12 通道 chan.md
+++ b/_posts/2021-10-12-golang 笔记12 通道 chan.md
@@ -10,9 +10,9 @@ tags:
     - golang 学习笔记
 ---
 
-# golang 笔记12 通道 chan
+# 通道 chan
 
-1. 双向通道与单向管道
+## 1. 双向通道与单向管道
 
 ```go
 import (
@@ -70,7 +70,7 @@ func TestChannel(t *testing.T) {
 
 ```
 
-2. 使用 chan 通信
+## 2. 使用 chan 通信
 
 ```go
 var wait sync.WaitGroup
@@ -103,7 +103,7 @@ func TestChan1(t *testing.T) {
 }
 ```
 
-3. 使用 context.Context 发送通知
+## 3. 使用 context.Context 发送通知
 
 ```go
 func f2(ctx context.Context) {
