--- a/_posts/2021-10-14-golang 笔记-附录.md
+++ b/_posts/2021-10-14-golang 笔记-附录.md
@@ -12,7 +12,7 @@ tags:
 
 # 搜集的示例代码
 
-1. 类型转换
+## 1. 类型转换
 
 ```go
 func TestBaseType(t *testing.T) {
@@ -24,7 +24,7 @@ func TestBaseType(t *testing.T) {
 }
 ```
 
-2. 计算md5值
+## 2. 计算md5值
 
 ```go
 func TestMd5() {
@@ -42,7 +42,7 @@ func TestMd5() {
 }
 ```
 
-3. 斐波那契
+## 3. 斐波那契
 
 ```go
 package main
@@ -68,7 +68,7 @@ func fib(n uint) (res uint64) {
 }
 ```
 
-4. 闭包封装
+## 4. 闭包封装
 
 ```go
 package main
@@ -94,7 +94,7 @@ func task1Wrapper(m, n interface{}) func() {
 }
 ```
 
-5. package 中的常识
+## 5. package 中的常识
 
 ```go
 package main
@@ -116,7 +116,7 @@ func main() {
 }
 ```
 
-6. 局部作用域
+## 6. 局部作用域
 
 ```go
 func Test1(t *testing.T) {
@@ -137,7 +137,7 @@ func Test1(t *testing.T) {
 }
 ```
 
-7. bytes.Buffer
+## 7. bytes.Buffer
 
 ```go
 func Test2(t *testing.T) {
@@ -157,7 +157,7 @@ func Test2(t *testing.T) {
 }
 ```
 
-8. json
+## 8. json
 
 ```go
 func Test3(t *testing.T) {
@@ -187,7 +187,7 @@ func Test3(t *testing.T) {
 }
 ```
 
-9. reflect
+## 9. reflect
 
 ```go
 func Test4(t *testing.T) {
@@ -202,7 +202,7 @@ func Test4(t *testing.T) {
 }
 ```
 
-10. sort
+## 10. sort
 
 ```go
 func Test5(t *testing.T) {
