--- a/_posts/2021-10-21-[document] 资料汇总.MD
+++ b/_posts/2021-10-21-[document] 资料汇总.MD
@@ -285,6 +285,67 @@ https://blog.csdn.net/java_lyvee/
 https://fauna.com/blog/introduction-to-transaction-isolation-levels
 
 
+## 技术博客 202008
+
+http://index-of.es/Java/One-on-One%20J2EE%20Development%20without%20EJB%20(Rod%20Johnson%20-%20Wrox).pdf
+
+https://github.com/ltolt/shopin-net
+
+https://books.google.com/books/about/Expert_one_on_one_J2EE_Development_witho.html?id=qZiHAAAACAAJ
+
+https://developer.aliyun.com/article/769587
+
+https://www.cnblogs.com/JAYIT/p/8241634.html
+
+https://droidyue.com/blog/2014/10/12/understanding-weakreference-in-java/index.html
+
+https://i0.hdslb.com/bfs/space/5a9c4ae145365718193bb0f3297dd7e36be4a859.png@.webp
+
+https://www.cnblogs.com/dafanjoy/p/11217708.html
+
+https://www.ietf.org/rfc/rfc3629.txt
+
+https://i0.wp.com/www.joelonsoftware.com/wp-content/uploads/2003/10/utf8.png
+
+https://mp.weixin.qq.com/s/vX9a4b4Oev5l2MQE4FdOEw
+
+https://aiden-dong.github.io/2019/08/22/Java-NIO%E7%AE%80%E4%BB%8B/
+
+https://chrome.google.com/webstore/detail/igg%E8%B0%B7%E6%AD%8C%E8%AE%BF%E9%97%AE%E5%8A%A9%E6%89%8B/ncldcbhpeplkfijdhnoepdgdnmjkckij
+
+https://github.com/sarabander/sicp-pdf
+
+https://docs.google.com/spreadsheets/d/1zfw8nPvJeewxcFUBpKUKmAVE8PjnJI7H0CKimdQXxr0/htmlview
+
+https://www.xcetv.com/data/attachment/forum/201806/28/171329qj93udui773mfd90.jpg
+
+https://baijiahao.baidu.com/s?id=1674339583402754064&wfr=spider&for=pc
+
+https://www.bilibili.com/read/cv6999384
+
+https://blog.csdn.net/SakuraA6/article/details/108810916
+
+https://blog.csdn.net/Dcwjh/article/details/104471560
+
+http://mysql.taobao.org/monthly/2021/02/
+
+https://db-engines.com/en/ranking
+
+https://github.com/hellojavaio/Java-Generics-and-Collections-2
+
+https://github.com/justjavac/free-programming-books-zh_CN
+
+https://www.bilibili.com/video/BV19W411B7w1?p=77&spm_id_from=pageDriver
+
+https://wap.kukudm.com/comiclist/2044/
+
+https://www.cartoonmad.com/comic/4982.html
+
+https://chrome.google.com/webstore/detail/igg%E8%B0%B7%E6%AD%8C%E8%AE%BF%E9%97%AE%E5%8A%A9%E6%89%8B/ncldcbhpeplkfijdhnoepdgdnmjkckij
+
+https://pan.baidu.com/s/1CV_7sXd8BDvAH9K12NLqFw
+
+
 
 ## 技术博客 202110
 
@@ -328,4 +389,20 @@ https://monkeysayhi.github.io/2017/12/28/%E4%B8%80%E6%96%87%E8%A7%A3%E5%86%B3%E5
 https://blog.csdn.net/haoel
 
 http://www.postgres.cn/v2/about
+
+---
+
+https://wizardforcel.gitbooks.io/the-art-of-programming-by-july/content/02.01.html
+
+https://blog.csdn.net/qilei2010/article/details/104879666
+
+https://github.com/gg-daddy/ebooks
+
+https://download.e-bookshelf.de/download/0000/5861/99/L-G-0000586199-0002361659.pdf
+
+https://dev.mysql.com/doc/refman/8.0/en/string-functions.html#function_concat
+
+https://edu.heibai.org/
+
+
 
