--- a/_posts/2022-03-04-[资料]网址书签.MD
+++ b/_posts/2022-03-04-[资料]网址书签.MD
@@ -73,7 +73,7 @@ tags:
 ## 工具
 
 - [maven库查询](https://mvnrepository.com/)
-- [文字生成器]](http://clarvel.github.io/TennoTyper/)
+- [文字生成器](http://clarvel.github.io/TennoTyper/)
 - [Banner生成器](https://www.bootschool.net/ascii)
 - [code2flow](https://app.code2flow.com/)
 - [即时设计](https://js.design/f/2_DXJV?p=tpI7rkEIdk)
