--- a/_posts/2022-03-04-[document]网址书签.MD
+++ b/_posts/2022-03-04-[document]网址书签.MD
@@ -39,6 +39,14 @@ tags:
 - [coursera](https://www.coursera.org/learn/os-pku)
 - [mashibing](https://www.mashibing.com/)
 - [Data Structure Visualizations](https://www.cs.usfca.edu/~galles/visualization/Algorithms.html)
+
+
+## 教程
+
+- [CSS教程](https://www.pengfeixc.com/tutorial/css/box-model)
+- [C 语言教程](https://wangdoc.com/clang/)
+- [Apache RocketMQ开发者指南](https://www.itmuch.com/books/rocketmq/)
+- [xxx](xxx)
 - [xxx](xxx)
 
 
@@ -52,6 +60,8 @@ tags:
 - [v2ex](https://v2ex.com/go/share)
 - [geeksforgeeks](https://www.geeksforgeeks.org/c-programming-language/)
 - [liandi](https://ld246.com/)
+- [美团技术团队](https://tech.meituan.com/2016/11/04/nio.html)
+- [数据库内核月报](http://mysql.taobao.org/monthly/2021/02/)
 
 ## 资料
 
@@ -67,7 +77,7 @@ tags:
 - [microservices](https://martinfowler.com/articles/microservices.html)
 - [cplusplus](http://www.cplusplus.com/doc/tutorial/)
 - [x86 Assembly Guide](http://www.cs.virginia.edu/~evans/cs216/guides/x86.html)
-
+- [RFC](https://www.ietf.org/rfc/rfc3629.txt)
 
 
 ## 工具
@@ -79,6 +89,7 @@ tags:
 - [即时设计](https://js.design/f/2_DXJV?p=tpI7rkEIdk)
 - [IP查询](https://www.ipaddress.com/)
 - [npmjs](https://www.npmjs.com/)
+- [根服务器](https://root-servers.org/)
 
 ## github.io
 
@@ -92,8 +103,10 @@ tags:
 - [rstyro](https://rstyro.github.io/blog/2018/01/03/Java%20%E9%9D%A2%E8%AF%95%E9%A2%98%E4%B9%8B%E5%89%8D%E7%AF%87/)
 - [unclecatmyself](https://unclecatmyself.github.io/2019/02/25/answer003/)
 - [sjsdfg](https://sjsdfg.github.io/)
-- [xxx](xxx)
-- [xxx](xxx)
+- [wizardforcel](https://wizardforcel.gitbooks.io)
+- [zhgcao](https://zhgcao.github.io/)
+- [monkeysayhi](https://monkeysayhi.github.io/)
+- [https://aiden-dong.gitee.io/](https://aiden-dong.gitee.io/)
 
 ## 个人技术博客
 
@@ -107,6 +120,8 @@ tags:
 - [crossoverjie](https://crossoverjie.top/2018/03/29/distributed-lock/distributed-lock-redis/)
 - [snyk](https://snyk.io/blog/jvm-ecosystem-report-2018-platform-application/)
 - [支付系统设计](http://doc.cocolian.cn/essay/)
+- [Mythsman](https://blog.mythsman.com/)
+- [飞雪无情的博客](https://www.flysnow.org/)
 
 ## 技术博客
 
@@ -127,6 +142,11 @@ tags:
 - [Oracle Java Bugs Search](https://www.oracle.com/search/results?cat=bugs)
 - [https://github.com/openjdk](https://github.com/openjdk)
 - [visualvm](https://visualvm.github.io/pluginscenters.html)
+- [Solaris OS 和 Linux for Java SE 7 上的故障排除工具](https://docs.oracle.com/javase/7/docs/webnotes/tsg/other/tools-Unix.html)
+- [Java平台标准版HotSpot虚拟机垃圾回收调优指南](https://docs.oracle.com/javase%2F8%2Fdocs%2Ftechnotes%2Fguides%2Fvm%2Fgctuning%2F%2F/)
+- [Doug Lea](http://gee.cs.oswego.edu/dl/)
+- [JVMTM Tool Interface](https://docs.oracle.com/javase/8/docs/platform/jvmti/jvmti.html)
+- [Getting Started with the G1 Garbage Collector](https://www.oracle.com/technetwork/tutorials/tutorials-1876574.html)
 
 ## 镜像
 
@@ -171,6 +191,34 @@ tags:
 - [https://github.com/sjsdfg/CS-Notes-PDF](https://github.com/sjsdfg/CS-Notes-PDF)
 - [https://github.com/hellojavaio/Java-Generics-and-Collections-2](https://github.com/hellojavaio/Java-Generics-and-Collections-2)
 - [https://giters.com/leoatchina/pdf](https://giters.com/leoatchina/pdf)
+- [https://github.com/wususu/effective-resourses](https://github.com/wususu/effective-resourses)
+- [https://github.com/Jonezhen/CSBook](https://github.com/Jonezhen/CSBook)
+- [https://github.com/auspbro/ebook-c/](https://github.com/auspbro/ebook-c/)
+- [https://github.com/zhanglizeyi/CSE120](https://github.com/zhanglizeyi/CSE120)
+- [https://github.com/homerzhou/pdf](https://github.com/homerzhou/pdf)
+- [https://github.com/Urinx/Books](https://github.com/Urinx/Books)
+- [https://github.com/justjavac/free-programming-books-zh_CN](https://github.com/justjavac/free-programming-books-zh_CN)
+- [https://github.com/hellojavaio/Java-Generics-and-Collections-2](https://github.com/hellojavaio/Java-Generics-and-Collections-2)
+- [https://github.com/sarabander/sicp-pdf](https://github.com/sarabander/sicp-pdf)
+- [One-on-One J2EE Development without EJB (Rod Johnson - Wrox).pdf](http://index-of.es/Java/One-on-One%20J2EE%20Development%20without%20EJB%20(Rod%20Johnson%20-%20Wrox).pdf)
+- [CLH](http://www.cs.tau.ac.il/~shanir/nir-pubs-web/Papers/CLH.pdf)
+- [https://github.com/gg-daddy/ebooks](https://github.com/gg-daddy/ebooks)
+
+## Golang
+
+- [https://go-zh.org/doc/](https://go-zh.org/doc/)
+- [effective_go](https://go-zh.org/doc/effective_go.html)
+- [Go Doc](https://github.com/golang/go/wiki/NonEnglish)
+- [awesome-go-cn](https://github.com/yinggaozhen/awesome-go-cn)
+- [GO 命令教程](https://hyper0x.github.io/go_command_tutorial/#/)
+- [Go语言核心36讲](https://www.cnblogs.com/MingsonZheng/category/2043205.html)
+- [GO编程模式](https://coolshell.cn/articles/21128.html)
+
+## CPU
+
+- [mips64](https://www.mips.com/products/architectures/mips64/)
+- [mips32](https://www.mips.com/products/architectures/mips32-3/)
+- [X86汇编快速入门](https://www.cnblogs.com/yukijohnson/archive/2012/10/27/2741836.html)
 
 ## 动漫
 
