--- a/_posts/2022-03-22-[git笔记]Pro Git笔记--2.基础.MD
+++ b/_posts/2022-03-22-[git笔记]Pro Git笔记--2.基础.MD
@@ -7,7 +7,7 @@ author:     BY morningcat
 header-img: img/201904/UNADJUSTEDNONRAW_thumb_643.jpg
 catalog: true
 tags:
-    - git
+    - git笔记
 ---
 
 [Pro Git 文档](https://git-scm.com/book/zh/v2)
