--- a/_posts/2022-03-22-[git笔记]Pro Git笔记--3.分支.MD
+++ b/_posts/2022-03-22-[git笔记]Pro Git笔记--3.分支.MD
@@ -24,11 +24,11 @@ tags:
 
 现在，Git 仓库中有五个对象：三个 `blob 对象`（保存着文件快照）、一个 `树 对象` （记录着目录结构和 blob 对象索引）以及一个 `提交 对象`（包含着指向前述树对象的指针和所有提交信息）。
 
-![首次提交对象及其树结构](https://img-blog.csdnimg.cn/1d9e5a05bf1442c0a1c46b5f9c0b7128.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBAbW9ybmluZ2NhdDIwMTg=,size_20,color_FFFFFF,t_70,g_se,x_16)
+![首次提交对象及其树结构](https://github.com/morningcat2018/morningcat2018.github.io/blob/master/png/git/git-branch-001.png)
 
 做些修改后再次提交，那么这次产生的提交对象会包含一个指向上次提交对象（父对象）的指针。
 
-![提交对象及其父对象](https://img-blog.csdnimg.cn/f99c2990a4b544e89164c542c69906da.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBAbW9ybmluZ2NhdDIwMTg=,size_20,color_FFFFFF,t_70,g_se,x_16)
+![提交对象及其父对象](https://github.com/morningcat2018/morningcat2018.github.io/blob/master/png/git/git-branch-002.png)
 
 `Git 的分支，其实本质上仅仅是指向提交对象的可变指针`。
 
