--- a/_posts/2022-03-22-[git笔记]Pro Git笔记 1.起步.MD
+++ b/_posts/2022-03-22-[git笔记]Pro Git笔记 1.起步.MD
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      Pro Git笔记--1.起步
+title:      Pro Git笔记 1.起步
 subtitle:   起步
 date:       2022-03-22
 author:     BY morningcat
