--- a/_posts/2022-03-22-[git笔记]Pro Git笔记 2.基础.MD
+++ b/_posts/2022-03-22-[git笔记]Pro Git笔记 2.基础.MD
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      Pro Git笔记--2.基础
+title:      Pro Git笔记 2.基础
 subtitle:   基础
 date:       2022-03-22
 author:     BY morningcat
