--- a/_posts/2022-03-22-[git笔记]Pro Git笔记 3.分支.MD
+++ b/_posts/2022-03-22-[git笔记]Pro Git笔记 3.分支.MD
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      Pro Git笔记--3.分支
+title:      Pro Git笔记 3.分支
 subtitle:   分支
 date:       2022-03-22
 author:     BY morningcat
