--- a/_posts/2022-03-22-[ProGit笔记]3 分支.MD
+++ b/_posts/2022-03-22-[ProGit笔记]3 分支.MD
@@ -24,11 +24,11 @@ tags:
 
 现在，Git 仓库中有五个对象：三个 `blob 对象`（保存着文件快照）、一个 `树 对象` （记录着目录结构和 blob 对象索引）以及一个 `提交 对象`（包含着指向前述树对象的指针和所有提交信息）。
 
-![首次提交对象及其树结构](png/git/git-branch-001.png)
+![首次提交对象及其树结构](/png/git/git-branch-001.png)
 
 做些修改后再次提交，那么这次产生的提交对象会包含一个指向上次提交对象（父对象）的指针。
 
-![提交对象及其父对象](png/git/git-branch-002.png)
+![提交对象及其父对象](/png/git/git-branch-002.png)
 
 `Git 的分支，其实本质上仅仅是指向提交对象的可变指针`。
 
