--- a/_posts/2022-03-04-[document]网址书签.MD
+++ b/_posts/2022-03-04-[document]网址书签.MD
@@ -46,7 +46,9 @@ tags:
 - [CSS教程](https://www.pengfeixc.com/tutorial/css/box-model)
 - [C 语言教程](https://wangdoc.com/clang/)
 - [Apache RocketMQ开发者指南](https://www.itmuch.com/books/rocketmq/)
-- [xxx](xxx)
+
+## OS
+- [操作系统：设计与实现 (2022 春季学期)](http://jyywiki.cn/OS/2022/)
 - [xxx](xxx)
 
 
@@ -63,7 +65,7 @@ tags:
 - [美团技术团队](https://tech.meituan.com/2016/11/04/nio.html)
 - [数据库内核月报](http://mysql.taobao.org/monthly/2021/02/)
 
-## 资料
+## 资料与手册
 
 - [编程语言排行榜](https://www.tiobe.com/tiobe-index/)
 - [数据库排行榜](https://db-engines.com/en/ranking)
@@ -78,7 +80,10 @@ tags:
 - [cplusplus](http://www.cplusplus.com/doc/tutorial/)
 - [x86 Assembly Guide](http://www.cs.virginia.edu/~evans/cs216/guides/x86.html)
 - [RFC](https://www.ietf.org/rfc/rfc3629.txt)
-
+- [析构函数 (C++) | Microsoft Learn](https://learn.microsoft.com/zh-cn/cpp/cpp/destructors-cpp?view=msvc-160)
+- [开源世界旅行手册](https://i.linuxtoy.org/docs/guide/index.html)
+- [elasticsearch 官网手册-中文](https://www.elastic.co/guide/cn/elasticsearch/guide/current/search-in-depth.html)
+- [elasticsearch 官网手册](https://www.elastic.co/guide/en/elasticsearch/reference/6.3/search-request-scroll.html)
 
 ## 工具
 
@@ -147,6 +152,7 @@ tags:
 - [Doug Lea](http://gee.cs.oswego.edu/dl/)
 - [JVMTM Tool Interface](https://docs.oracle.com/javase/8/docs/platform/jvmti/jvmti.html)
 - [Getting Started with the G1 Garbage Collector](https://www.oracle.com/technetwork/tutorials/tutorials-1876574.html)
+- [Inside the Java Virtual Machine](https://www.artima.com/insidejvm/ed2/)
 
 ## 镜像
 
@@ -218,6 +224,7 @@ tags:
 
 - [mips64](https://www.mips.com/products/architectures/mips64/)
 - [mips32](https://www.mips.com/products/architectures/mips32-3/)
+- [x86 Assembly Guide](https://www.cs.virginia.edu/~evans/cs216/guides/x86.html)
 - [X86汇编快速入门](https://www.cnblogs.com/yukijohnson/archive/2012/10/27/2741836.html)
 
 ## 动漫
