--- a/_posts/2022-03-04-[document]网址书签.MD
+++ b/_posts/2022-03-04-[document]网址书签.MD
@@ -27,7 +27,7 @@ tags:
 
 
 - [慕课网](https://www.imooc.com/)
-- [慕课-专栏](https://www.imooc.com/read/43/article/715)
+- [慕课专栏](https://www.imooc.com/read/43/article/715)
 - [掘金小册](https://juejin.cn/course)
 - [极客时间](https://time.geekbang.org/course/intro/265)
 - [segmentfault](https://segmentfault.com/u/morningcat_zhang)
@@ -36,20 +36,6 @@ tags:
 - [leetcode](https://leetcode-cn.com/)
 - [网易云课堂](https://study.163.com/)
 - [中国大学MOOC](https://www.icourse163.org/)
-- [coursera](https://www.coursera.org/learn/os-pku)
-- [mashibing](https://www.mashibing.com/)
-- [Data Structure Visualizations](https://www.cs.usfca.edu/~galles/visualization/Algorithms.html)
-
-
-## 教程
-
-- [CSS教程](https://www.pengfeixc.com/tutorial/css/box-model)
-- [C 语言教程](https://wangdoc.com/clang/)
-- [Apache RocketMQ开发者指南](https://www.itmuch.com/books/rocketmq/)
-
-## OS
-- [操作系统：设计与实现 (2022 春季学期)](http://jyywiki.cn/OS/2022/)
-- [xxx](xxx)
 
 
 ## 技术网站
@@ -64,6 +50,33 @@ tags:
 - [liandi](https://ld246.com/)
 - [美团技术团队](https://tech.meituan.com/2016/11/04/nio.html)
 - [数据库内核月报](http://mysql.taobao.org/monthly/2021/02/)
+
+
+## OS
+- [操作系统：设计与实现 (2022 春季学期)](http://jyywiki.cn/OS/2022/)
+- [操作系统：设计与实现 (2023 春季学期)](https://jyywiki.cn/OS/2023/)
+- [（哈尔滨工业大学）操作系统](https://www.bilibili.com/video/BV1y7411P7Hz)
+- [Operating Systems Course Notes Main Page](https://www.cs.uic.edu/~jbell/CourseNotes/OperatingSystems/)
+
+## CPU
+
+- [mips64](https://www.mips.com/products/architectures/mips64/)
+- [mips32](https://www.mips.com/products/architectures/mips32-3/)
+- [x86 Assembly Guide](https://www.cs.virginia.edu/~evans/cs216/guides/x86.html)
+- [X86汇编快速入门](https://www.cnblogs.com/yukijohnson/archive/2012/10/27/2741836.html)
+
+
+## GIT
+
+- [约定式提交](https://www.conventionalcommits.org/zh-hans/v1.0.0/)
+
+
+## 教程
+
+- [CSS教程](https://www.pengfeixc.com/tutorial/css/box-model)
+- [C 语言教程](https://wangdoc.com/clang/)
+- [Apache RocketMQ开发者指南](https://www.itmuch.com/books/rocketmq/)
+
 
 ## 资料与手册
 
@@ -80,10 +93,16 @@ tags:
 - [cplusplus](http://www.cplusplus.com/doc/tutorial/)
 - [x86 Assembly Guide](http://www.cs.virginia.edu/~evans/cs216/guides/x86.html)
 - [RFC](https://www.ietf.org/rfc/rfc3629.txt)
-- [析构函数 (C++) | Microsoft Learn](https://learn.microsoft.com/zh-cn/cpp/cpp/destructors-cpp?view=msvc-160)
+- [析构函数 C++ | Microsoft Learn](https://learn.microsoft.com/zh-cn/cpp/cpp/destructors-cpp?view=msvc-160)
 - [开源世界旅行手册](https://i.linuxtoy.org/docs/guide/index.html)
 - [elasticsearch 官网手册-中文](https://www.elastic.co/guide/cn/elasticsearch/guide/current/search-in-depth.html)
 - [elasticsearch 官网手册](https://www.elastic.co/guide/en/elasticsearch/reference/6.3/search-request-scroll.html)
+- [Data Structure Visualizations](https://www.cs.usfca.edu/~galles/visualization/Algorithms.html)
+- [数据库内核月报](http://mysql.taobao.org/monthly/)
+- [cubrid](https://www.cubrid.org/blog/)
+- [ThoughtWorks洞见](https://insights.thoughtworks.cn/serverless-microservices-architecture-case/)
+- [iteye-mercyblitz](https://www.iteye.com/blog/user/mercyblitz)
+
 
 ## 工具
 
@@ -95,6 +114,44 @@ tags:
 - [IP查询](https://www.ipaddress.com/)
 - [npmjs](https://www.npmjs.com/)
 - [根服务器](https://root-servers.org/)
+- [MikuTools - 一个轻量的工具集合](https://tools.miku.ac/)
+
+## JAVA
+
+- [Java SE API & 文档](https://www.oracle.com/cn/java/technologies/java-se-api-doc.html)
+- [Java SE downloads](https://www.oracle.com/java/technologies/downloads/archive/)
+- [The Java™ Tutorials](https://docs.oracle.com/javase/tutorial/index.html)
+- [JDK 11 Documentation](https://docs.oracle.com/en/java/javase/11/)
+- [Java Language and Virtual Machine Specifications](https://docs.oracle.com/javase/specs/index.html)
+- [Java Downloads](https://www.oracle.com/java/technologies/downloads/)
+- [Oracle Java Bugs Search](https://www.oracle.com/search/results?cat=bugs)
+- [https://github.com/openjdk](https://github.com/openjdk)
+- [visualvm](https://visualvm.github.io/pluginscenters.html)
+- [Solaris OS 和 Linux for Java SE 7 上的故障排除工具](https://docs.oracle.com/javase/7/docs/webnotes/tsg/other/tools-Unix.html)
+- [Java平台标准版HotSpot虚拟机垃圾回收调优指南](https://docs.oracle.com/javase%2F8%2Fdocs%2Ftechnotes%2Fguides%2Fvm%2Fgctuning%2F%2F/)
+- [Doug Lea](http://gee.cs.oswego.edu/dl/)
+- [JVMTM Tool Interface](https://docs.oracle.com/javase/8/docs/platform/jvmti/jvmti.html)
+- [Getting Started with the G1 Garbage Collector](https://www.oracle.com/technetwork/tutorials/tutorials-1876574.html)
+- [Inside the Java Virtual Machine](https://www.artima.com/insidejvm/ed2/)
+- [Java Search](http://www.docjar.com/)
+
+## Golang
+
+- [https://go-zh.org/doc/](https://go-zh.org/doc/)
+- [effective_go](https://go-zh.org/doc/effective_go.html)
+- [Go Doc](https://github.com/golang/go/wiki/NonEnglish)
+- [awesome-go-cn](https://github.com/yinggaozhen/awesome-go-cn)
+- [GO 命令教程](https://hyper0x.github.io/go_command_tutorial/#/)
+- [Go语言核心36讲](https://www.cnblogs.com/MingsonZheng/category/2043205.html)
+- [GO编程模式](https://coolshell.cn/articles/21128.html)
+
+
+## 镜像
+
+- [清华大学开源软件镜像站](https://mirrors.tuna.tsinghua.edu.cn/AdoptOpenJDK/)
+- [华为镜像](https://repo.huaweicloud.com/java/jdk/)
+- [npmmirror](https://npmmirror.com/)
+
 
 ## github.io
 
@@ -128,37 +185,7 @@ tags:
 - [Mythsman](https://blog.mythsman.com/)
 - [飞雪无情的博客](https://www.flysnow.org/)
 
-## 技术博客
 
-- [数据库内核月报](http://mysql.taobao.org/monthly/)
-- [cubrid](https://www.cubrid.org/blog/)
-- [ThoughtWorks洞见](https://insights.thoughtworks.cn/serverless-microservices-architecture-case/)
-- [iteye-mercyblitz](https://www.iteye.com/blog/user/mercyblitz)
-
-
-## JAVA
-
-- [Java SE API & 文档](https://www.oracle.com/cn/java/technologies/java-se-api-doc.html)
-- [Java SE downloads](https://www.oracle.com/java/technologies/downloads/archive/)
-- [The Java™ Tutorials](https://docs.oracle.com/javase/tutorial/index.html)
-- [JDK 11 Documentation](https://docs.oracle.com/en/java/javase/11/)
-- [Java Language and Virtual Machine Specifications](https://docs.oracle.com/javase/specs/index.html)
-- [Java Downloads](https://www.oracle.com/java/technologies/downloads/)
-- [Oracle Java Bugs Search](https://www.oracle.com/search/results?cat=bugs)
-- [https://github.com/openjdk](https://github.com/openjdk)
-- [visualvm](https://visualvm.github.io/pluginscenters.html)
-- [Solaris OS 和 Linux for Java SE 7 上的故障排除工具](https://docs.oracle.com/javase/7/docs/webnotes/tsg/other/tools-Unix.html)
-- [Java平台标准版HotSpot虚拟机垃圾回收调优指南](https://docs.oracle.com/javase%2F8%2Fdocs%2Ftechnotes%2Fguides%2Fvm%2Fgctuning%2F%2F/)
-- [Doug Lea](http://gee.cs.oswego.edu/dl/)
-- [JVMTM Tool Interface](https://docs.oracle.com/javase/8/docs/platform/jvmti/jvmti.html)
-- [Getting Started with the G1 Garbage Collector](https://www.oracle.com/technetwork/tutorials/tutorials-1876574.html)
-- [Inside the Java Virtual Machine](https://www.artima.com/insidejvm/ed2/)
-
-## 镜像
-
-- [清华大学开源软件镜像站](https://mirrors.tuna.tsinghua.edu.cn/AdoptOpenJDK/)
-- [华为镜像](https://repo.huaweicloud.com/java/jdk/)
-- [npmmirror](https://npmmirror.com/)
 
 ## 搜集的github项目
 
@@ -210,22 +237,7 @@ tags:
 - [CLH](http://www.cs.tau.ac.il/~shanir/nir-pubs-web/Papers/CLH.pdf)
 - [https://github.com/gg-daddy/ebooks](https://github.com/gg-daddy/ebooks)
 
-## Golang
 
-- [https://go-zh.org/doc/](https://go-zh.org/doc/)
-- [effective_go](https://go-zh.org/doc/effective_go.html)
-- [Go Doc](https://github.com/golang/go/wiki/NonEnglish)
-- [awesome-go-cn](https://github.com/yinggaozhen/awesome-go-cn)
-- [GO 命令教程](https://hyper0x.github.io/go_command_tutorial/#/)
-- [Go语言核心36讲](https://www.cnblogs.com/MingsonZheng/category/2043205.html)
-- [GO编程模式](https://coolshell.cn/articles/21128.html)
-
-## CPU
-
-- [mips64](https://www.mips.com/products/architectures/mips64/)
-- [mips32](https://www.mips.com/products/architectures/mips32-3/)
-- [x86 Assembly Guide](https://www.cs.virginia.edu/~evans/cs216/guides/x86.html)
-- [X86汇编快速入门](https://www.cnblogs.com/yukijohnson/archive/2012/10/27/2741836.html)
 
 ## 动漫
 
