--- a/_posts/2022-03-04-[document]网址书签.MD
+++ b/_posts/2022-03-04-[document]网址书签.MD
@@ -53,10 +53,15 @@ tags:
 
 
 ## OS
+- [GNU操作系统](https://www.gnu.org/doc/doc.html)
+- [Linux Kernel](https://www.kernel.org/)
+- [Liunx 内核源码在线阅读](https://elixir.bootlin.com/linux/v2.6.13/source)
+- [开源世界旅行手册](https://i.linuxtoy.org/docs/guide/index.html)
 - [操作系统：设计与实现 (2022 春季学期)](http://jyywiki.cn/OS/2022/)
 - [操作系统：设计与实现 (2023 春季学期)](https://jyywiki.cn/OS/2023/)
 - [（哈尔滨工业大学）操作系统](https://www.bilibili.com/video/BV1y7411P7Hz)
 - [Operating Systems Course Notes Main Page](https://www.cs.uic.edu/~jbell/CourseNotes/OperatingSystems/)
+- [Parallel Programming](https://mirrors.edge.kernel.org/pub/linux/kernel/people/paulmck/perfbook/perfbook.html)
 
 ## CPU
 
@@ -65,44 +70,44 @@ tags:
 - [x86 Assembly Guide](https://www.cs.virginia.edu/~evans/cs216/guides/x86.html)
 - [X86汇编快速入门](https://www.cnblogs.com/yukijohnson/archive/2012/10/27/2741836.html)
 
-
 ## GIT
 
+- [git document](https://git-scm.com/book/en/v2)
+- [git 中文文档](https://git-scm.com/book/zh/v2/)
 - [约定式提交](https://www.conventionalcommits.org/zh-hans/v1.0.0/)
 
 
-## 教程
+## 编程语言
 
-- [CSS教程](https://www.pengfeixc.com/tutorial/css/box-model)
+- [编程语言排行榜](https://www.tiobe.com/tiobe-index/)
 - [C 语言教程](https://wangdoc.com/clang/)
-- [Apache RocketMQ开发者指南](https://www.itmuch.com/books/rocketmq/)
+- [cplusplus](http://www.cplusplus.com/doc/tutorial/)
+- [析构函数 C++ | Microsoft Learn](https://learn.microsoft.com/zh-cn/cpp/cpp/destructors-cpp?view=msvc-160)
+- [Kotlin 语言中文站](https://www.kotlincn.net/docs/reference/classes.html)
+- [JavaScript. The Core: 2nd Edition](http://dmitrysoshnikov.com/ecmascript/javascript-the-core-2nd-edition/)
+- [Node入门](https://www.nodebeginner.org/index-zh-cn.html#javascript-and-nodejs)
+- [CSS教程](https://www.pengfeixc.com/tutorial/css/box-model)
 
 
 ## 资料与手册
 
-- [编程语言排行榜](https://www.tiobe.com/tiobe-index/)
-- [数据库排行榜](https://db-engines.com/en/ranking)
-- [git](https://git-scm.com/book/zh/v2/)
-- [Redis 命令参考](http://redisdoc.com/sorted_set/zrem.html)
-- [Kotlin 语言中文站](https://www.kotlincn.net/docs/reference/classes.html)
-- [JavaScript. The Core: 2nd Edition](http://dmitrysoshnikov.com/ecmascript/javascript-the-core-2nd-edition/)
-- [postgres文档](http://postgres.cn/docs/10/functions-formatting.html)
-- [Parallel Programming](https://mirrors.edge.kernel.org/pub/linux/kernel/people/paulmck/perfbook/perfbook.html)
-- [Node入门](https://www.nodebeginner.org/index-zh-cn.html#javascript-and-nodejs)
-- [microservices](https://martinfowler.com/articles/microservices.html)
-- [cplusplus](http://www.cplusplus.com/doc/tutorial/)
-- [x86 Assembly Guide](http://www.cs.virginia.edu/~evans/cs216/guides/x86.html)
 - [RFC](https://www.ietf.org/rfc/rfc3629.txt)
-- [析构函数 C++ | Microsoft Learn](https://learn.microsoft.com/zh-cn/cpp/cpp/destructors-cpp?view=msvc-160)
-- [开源世界旅行手册](https://i.linuxtoy.org/docs/guide/index.html)
+- [Data Structure Visualizations](https://www.cs.usfca.edu/~galles/visualization/Algorithms.html)
+
+- [microservices](https://martinfowler.com/articles/microservices.html)
+- [Apache RocketMQ开发者指南](https://www.itmuch.com/books/rocketmq/)
 - [elasticsearch 官网手册-中文](https://www.elastic.co/guide/cn/elasticsearch/guide/current/search-in-depth.html)
 - [elasticsearch 官网手册](https://www.elastic.co/guide/en/elasticsearch/reference/6.3/search-request-scroll.html)
-- [Data Structure Visualizations](https://www.cs.usfca.edu/~galles/visualization/Algorithms.html)
-- [数据库内核月报](http://mysql.taobao.org/monthly/)
 - [cubrid](https://www.cubrid.org/blog/)
 - [ThoughtWorks洞见](https://insights.thoughtworks.cn/serverless-microservices-architecture-case/)
 - [iteye-mercyblitz](https://www.iteye.com/blog/user/mercyblitz)
 
+## 数据库
+
+- [数据库排行榜](https://db-engines.com/en/ranking)
+- [数据库内核月报](http://mysql.taobao.org/monthly/)
+- [postgres文档](http://postgres.cn/docs/10/functions-formatting.html)
+- [Redis 命令参考](http://redisdoc.com/sorted_set/zrem.html)
 
 ## 工具
 
@@ -137,20 +142,41 @@ tags:
 
 ## Golang
 
-- [https://go-zh.org/doc/](https://go-zh.org/doc/)
-- [effective_go](https://go-zh.org/doc/effective_go.html)
-- [Go Doc](https://github.com/golang/go/wiki/NonEnglish)
-- [awesome-go-cn](https://github.com/yinggaozhen/awesome-go-cn)
+- [go包搜索](https://pkg.go.dev/)
+- [go标准库](https://pkg.go.dev/std)
+- [go语言文档](https://go-zh.org/doc/)
+- [实效Go编程](https://go-zh.org/doc/effective_go.html)
+- [Go wiki](https://github.com/golang/go/wiki/NonEnglish)
+- [GO 收录大全](https://github.com/yinggaozhen/awesome-go-cn)
 - [GO 命令教程](https://hyper0x.github.io/go_command_tutorial/#/)
-- [Go语言核心36讲](https://www.cnblogs.com/MingsonZheng/category/2043205.html)
-- [GO编程模式](https://coolshell.cn/articles/21128.html)
 
+
+## Python
+
+- [Python 3.11.3 中文文档](https://docs.python.org/zh-cn/3/)
+- [py包搜索](https://pypi.org/search/)
 
 ## 镜像
 
 - [清华大学开源软件镜像站](https://mirrors.tuna.tsinghua.edu.cn/AdoptOpenJDK/)
 - [华为镜像](https://repo.huaweicloud.com/java/jdk/)
 - [npmmirror](https://npmmirror.com/)
+
+
+## 个人技术博客
+
+- [酷 壳 – CoolShell](https://coolshell.cn/)
+- [阮一峰的网络日志](http://www.ruanyifeng.com/blog/)
+- [sczyh30](https://www.sczyh30.com/archives/page/4/)
+- [田小波的技术博客](https://www.tianxiaobo.com/)
+- [当然我在扯淡](http://www.yinwang.org/)
+- [Hawstein's Blog](https://hawstein.com/)
+- [Never More](http://blog.dyngr.com/)
+- [crossoverjie](https://crossoverjie.top/2018/03/29/distributed-lock/distributed-lock-redis/)
+- [snyk](https://snyk.io/blog/jvm-ecosystem-report-2018-platform-application/)
+- [支付系统设计](http://doc.cocolian.cn/essay/)
+- [Mythsman](https://blog.mythsman.com/)
+- [飞雪无情的博客](https://www.flysnow.org/)
 
 
 ## github.io
@@ -169,23 +195,6 @@ tags:
 - [zhgcao](https://zhgcao.github.io/)
 - [monkeysayhi](https://monkeysayhi.github.io/)
 - [https://aiden-dong.gitee.io/](https://aiden-dong.gitee.io/)
-
-## 个人技术博客
-
-- [酷 壳 – CoolShell](https://coolshell.cn/)
-- [阮一峰的网络日志](http://www.ruanyifeng.com/blog/)
-- [sczyh30](https://www.sczyh30.com/archives/page/4/)
-- [田小波的技术博客](https://www.tianxiaobo.com/)
-- [当然我在扯淡](http://www.yinwang.org/)
-- [Hawstein's Blog](https://hawstein.com/)
-- [Never More](http://blog.dyngr.com/)
-- [crossoverjie](https://crossoverjie.top/2018/03/29/distributed-lock/distributed-lock-redis/)
-- [snyk](https://snyk.io/blog/jvm-ecosystem-report-2018-platform-application/)
-- [支付系统设计](http://doc.cocolian.cn/essay/)
-- [Mythsman](https://blog.mythsman.com/)
-- [飞雪无情的博客](https://www.flysnow.org/)
-
-
 
 ## 搜集的github项目
 
@@ -242,3 +251,6 @@ tags:
 ## 动漫
 
 - [吉卜力](https://www.ghibli.jp/info/013251/)
+
+
+
