--- a/_posts/2022-03-04-[document]网址书签.MD
+++ b/_posts/2022-03-04-[document]网址书签.MD
@@ -76,13 +76,19 @@ tags:
 - [git 中文文档](https://git-scm.com/book/zh/v2/)
 - [约定式提交](https://www.conventionalcommits.org/zh-hans/v1.0.0/)
 
+## RFC
+
+- [faqs](http://www.faqs.org/rfcs/)
+- [ietf](https://www.ietf.org/rfc/)
+- [freesoft](https://www.freesoft.org/CIE/RFC/793/)
+- [rfc-es](https://www.rfc-es.org/rfc/rfc0793-es.txt)
 
 ## 编程语言
 
 - [编程语言排行榜](https://www.tiobe.com/tiobe-index/)
 - [C 语言教程](https://wangdoc.com/clang/)
 - [cplusplus](http://www.cplusplus.com/doc/tutorial/)
-- [析构函数 C++ | Microsoft Learn](https://learn.microsoft.com/zh-cn/cpp/cpp/destructors-cpp?view=msvc-160)
+- [Microsoft Learn C++](https://learn.microsoft.com/zh-cn/cpp/cpp/destructors-cpp?view=msvc-160)
 - [Kotlin 语言中文站](https://www.kotlincn.net/docs/reference/classes.html)
 - [JavaScript. The Core: 2nd Edition](http://dmitrysoshnikov.com/ecmascript/javascript-the-core-2nd-edition/)
 - [Node入门](https://www.nodebeginner.org/index-zh-cn.html#javascript-and-nodejs)
