--- a/_posts/2023-11-24-[旅游] 南京旅游指南.md
+++ b/_posts/2023-11-24-[旅游] 南京旅游指南.md
@@ -31,12 +31,14 @@ tags:
     - 金陵美术馆
     - 先锋书店(老门东店)
 - 大报恩寺(80元)
+
+## 雨花台风景区周边
+
 - 雨花台风景区
     - 烈士纪念碑
     - 雨花台烈士纪念馆
     - 忠魂亭
-
-
+- 南京科技馆
 
 ## 中山陵景区
 
@@ -91,7 +93,7 @@ tags:
 - 午朝门公园
 - 南京明故宫遗址公园
 - 西华门遗址广场
-- 南京地址博物院
+- 南京地质博物院
 
 
 ## 鼓楼
@@ -110,7 +112,7 @@ tags:
 - 莫愁湖
 - 汉中门广场
 
-## 南京科技馆
+
 
 ## 沿江周边
 
