--- a/_posts/2023-11-24-[旅游] 南京旅游指南.md
+++ b/_posts/2023-11-24-[旅游] 南京旅游指南.md
@@ -16,9 +16,9 @@ tags:
 - 夫子庙(30元)
     - 古秦淮河
     - 中国科举博物馆(50元)
-- 瞻园(太平天国纪念馆)(南京博物馆之一)(30元)
+- 太平天国历史博物馆(瞻园)(南京市博物总馆之一)(30元)
 - 白鹭洲公园
-- 朝天宫(南京博物馆之一)(25元)
+- 南京市博物馆(朝天宫)(南京市博物总馆之一)(25元)
 
 
 ## 中华门景区
@@ -82,8 +82,8 @@ tags:
 - 大行宫(总统府,中国近代史遗址博物馆)(40元)
 - 南京图书馆
 - 江苏省美术馆
-- 江宁织造博物馆(30元)
-- 六朝博物馆(南京博物馆之一)(30元)
+- 江宁织造博物馆(南京市博物总馆之一)(30元)
+- 六朝博物馆(南京市博物总馆之一)(30元)
 
 
 ## 南京博物院周边
@@ -137,3 +137,16 @@ tags:
 - 珍珠泉风景区
 - 响堂景区
 
+## 南京市博物总馆
+
+- 南京市博物馆(朝天宫)
+- 太平天国历史博物馆(瞻园)
+- 梅园新村纪念馆
+- 八路军驻京办事处纪念馆
+- 南京市民俗博物馆(甘熙宅第)
+- 渡江胜利纪念馆
+- 江宁织造博物馆
+- 六朝博物馆
+- 太平天国壁画艺术馆(暂未开放)
+- 明中山王徐达陵园(暂未开放)
+- 明岐阳王李文忠陵园(暂未开放)
