--- a/_posts/2022-03-27-[密码学]非对称加密 DH算法.md
+++ b/_posts/2022-03-27-[密码学]非对称加密 DH算法.md
@@ -19,12 +19,12 @@ tags:
 迪菲－赫尔曼通过公共信道交换一个信息，就可以创建一个可以用于在公共信道上安全通信的`对称密钥`
 
 > 交换过程
-![在这里插入图片描述](https://img-blog.csdnimg.cn/90b229a1f605494ab9e2912e5f4a305a.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBAbW9ybmluZ2NhdDIwMTg=,size_19,color_FFFFFF,t_70,g_se,x_16)
+![在这里插入图片描述](/png/cryptography/dh1.png)
 
 ## 原理
 
 最简单，最早提出的个协议使用`一个质数p的整数模n乘法群以及其原根g`。下面展示这个算法，`绿色`表示非秘密信息，`红色`粗体表示秘密信息：
-![在这里插入图片描述](https://img-blog.csdnimg.cn/862ec502da30403e815b43f5266268b7.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBAbW9ybmluZ2NhdDIwMTg=,size_20,color_FFFFFF,t_70,g_se,x_16)
+![在这里插入图片描述](/png/cryptography/dh2.png)
 
 爱丽丝和鲍伯最终都得到了同样的值，因为在模p下 g^{ab} 和 g^{ba} 相等。 注意a, b 和 g^ab = g^ba mod p 是秘密的。 其他所有的值 p, g, `g^a mod p`, 以及 `g^b mod p` 都可以在公共信道上传递。 一旦爱丽丝和鲍伯得出了公共秘密，他们就可以把它用作对称密钥，以进行双方的加密通讯，因为这个密钥只有他们才能得到。
 
