--- a/_posts/2022-03-27-[密码学]非对称加密 DSA算法.md
+++ b/_posts/2022-03-27-[密码学]非对称加密 DSA算法.md
@@ -20,7 +20,7 @@ DSA 算法包含了四种操作：密钥生成、密钥分发、签名、验证
 
 密钥生成包含两个阶段。第一阶段是`算法参数的选择`，可以在系统的不同用户之间共享，而第二阶段则`为每个用户计算独立的密钥组合`。
 
-![在这里插入图片描述](https://img-blog.csdnimg.cn/84b848f55786487e9d3e6c8eb937fd5a.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBAbW9ybmluZ2NhdDIwMTg=,size_20,color_FFFFFF,t_70,g_se,x_16)
+![在这里插入图片描述](/png/cryptography/dsa1.png)
 
 2. 密钥分发
 
@@ -28,11 +28,11 @@ DSA 算法包含了四种操作：密钥生成、密钥分发、签名、验证
 
 3. 签名流程
 
-![在这里插入图片描述](https://img-blog.csdnimg.cn/66957327d8394532ab41036b8c51a877.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBAbW9ybmluZ2NhdDIwMTg=,size_20,color_FFFFFF,t_70,g_se,x_16)
+![在这里插入图片描述](/png/cryptography/dsa2.png)
 
 4. 验证签名
 
-![在这里插入图片描述](https://img-blog.csdnimg.cn/3db61d5e129d4138aa1ec542841f495f.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBAbW9ybmluZ2NhdDIwMTg=,size_20,color_FFFFFF,t_70,g_se,x_16)
+![在这里插入图片描述](/png/cryptography/dsa3.png)
 
 ---
 
