--- a/_posts/2022-03-27-[密码学]非对称加密 ECC算法.md
+++ b/_posts/2022-03-27-[密码学]非对称加密 ECC算法.md
@@ -16,7 +16,7 @@ tags:
 
 ECC的主要优势是它相比RSA加密算法使用较小的密钥长度并提供相当等级的安全性。
 
-![在这里插入图片描述](https://img-blog.csdnimg.cn/703f5b3cf9b74fcb8cdea275e17befc4.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBAbW9ybmluZ2NhdDIwMTg=,size_20,color_FFFFFF,t_70,g_se,x_16)
+![在这里插入图片描述](/png/cryptography/ecc1.png)
 
 
 ## java jdk未提供ecc实现
