--- a/_posts/2024-01-01-[OS] 汇编笔记.md
+++ b/_posts/2024-01-01-[OS] 汇编笔记.md
@@ -19,7 +19,7 @@ tags:
 
 ## x86寄存器
 
-![image.png](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/e8e23aaf3110465180b25161cab12a04~tplv-k3u1fbpfcp-jj-mark:0:0:0:0:q75.image#?w=2574&h=1400&s=1724180&e=png&b=fbfafa)
+![image.png](/png/x86.png)
 
 
 
