--- a/_posts/2024-03-20-[Rust] Rust的项目结构的笔记.md
+++ b/_posts/2024-03-20-[Rust] Rust的项目结构的笔记.md
@@ -30,7 +30,7 @@ cargo的特性, 构建、测试、共享Crate
 会产生一个名为 demo-pro 的 Package
 
 目录结构如下:
-![在这里插入图片描述](https://img-blog.csdnimg.cn/direct/221268617de5416695ec89ee798d3841.png)
+![在这里插入图片描述](/img/rust/rust001.png)
 ---
 
 cargo 的惯例:
@@ -44,7 +44,7 @@ cargo 的惯例:
 cargo 会把 crate root 文件交给 rustic 来构建 library 或 binary 
 
 3. 一个package 可以有多个 binary crate
-![在这里插入图片描述](https://img-blog.csdnimg.cn/direct/22975ac0601448138b112f707a75937b.png)
+![在这里插入图片描述](/img/rust/rust002.png)
 
 
 
@@ -94,7 +94,7 @@ mod front_of_house {
     }
 }
 ```
-![在这里插入图片描述](https://img-blog.csdnimg.cn/direct/72914d8c05b24e8cb341ec181e5da60e.png)
+![在这里插入图片描述](/img/rust/rust003.png)
 
 ### 案例2:
 src/lib.rs
@@ -206,12 +206,12 @@ fn main() {
 ### 案例7 将模块重新拆分为不同文件
 
 理论:
-![在这里插入图片描述](https://img-blog.csdnimg.cn/direct/64b719a7b553474ca33b42fcb4b00081.png)
+![在这里插入图片描述](/img/rust/rust004.png)
 
 
 1. 一级拆分 (等同案例4的效果)
 
-![在这里插入图片描述](https://img-blog.csdnimg.cn/direct/c5724bb3071d4501827e633dfbca7f13.png)
+![在这里插入图片描述](/img/rust/rust005.png)
 
 src/lib.rs
 ```rust
