--- a/_posts/2022-03-22-[ProGit笔记]1 起步.MD
+++ b/_posts/2022-03-22-[ProGit笔记]1 起步.MD
@@ -37,7 +37,7 @@ Git 更像是把数据看作是对小型文件系统的一系列`快照`：
 在 Git中，每当你提交更新或保存项目状态时，它基本上就会对当时的全部文件创建一个快照并保存这个快照的索引。
 为了效率，如果文件没有修改，Git 不再重新存储该文件，而是只保留一个链接指向之前存储的文件。
 
-![在这里插入图片描述](https://img-blog.csdnimg.cn/9c7f0bfa40794f06a203e0ce5cffbaad.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBAbW9ybmluZ2NhdDIwMTg=,size_20,color_FFFFFF,t_70,g_se,x_16)
+![在这里插入图片描述](/png/git/git001-1.png)
 
 2. 近乎所有操作都是本地执行
 
@@ -64,7 +64,7 @@ Git 有三种状态，你的文件可能处于其中之一：
 
 这会让我们的 Git 项目拥有三个阶段：工作区、暂存区以及 Git 目录
 
-![在这里插入图片描述](https://img-blog.csdnimg.cn/a9e4b472e76845c3bbf952bfceaaccbb.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBAbW9ybmluZ2NhdDIwMTg=,size_20,color_FFFFFF,t_70,g_se,x_16)
+![在这里插入图片描述](/png/git/git001-2.png)
 
 ## 安装 Git
 
