--- a/_posts/2024-03-20-[Rust] Rust的项目结构的笔记.md
+++ b/_posts/2024-03-20-[Rust] Rust的项目结构的笔记.md
@@ -242,7 +242,7 @@ pub mod hosting {
 
 2. 二级拆分 (等同案例2的效果)
 
-![在这里插入图片描述](https://img-blog.csdnimg.cn/direct/d834a6962e81420aa76540871b0ff740.png)
+![在这里插入图片描述](/img/rust/rust006.png)
 
 src/lib.rs
 ```rust
